loading spinner, jobs adding to all jobs page, all jobs page not styled

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
