--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "chart.js": "^4.2.1",
     "framer-motion": "^10.0.2",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
@@ -15,7 +16,6 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "recharts": "^2.4.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.2.6"
   },
   "proxy": "http://localhost:4000"
