--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "postcss": "^8.4.21",
     "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.2.6"
   },
