--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "cd client && npm run build",
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix client",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "deploy": "npm run build && netlify deploy --prod"
+
   },
   "keywords": [],
   "author": "",
